[gd_scene load_steps=13 format=3 uid="uid://c4qqgn3ykey7v"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_52ws4"]
[ext_resource type="Texture2D" uid="uid://kni8v813lp3c" path="res://assets/characters/cluedomancer-full-shot.png" id="1_m3oq4"]
[ext_resource type="Texture2D" uid="uid://slmkrvdmq24d" path="res://assets/background-alley.png" id="2_g62rl"]
[ext_resource type="Texture2D" uid="uid://c3l1af2pyf0l6" path="res://assets/cluedomancer.png" id="3_7cixq"]
[ext_resource type="Texture2D" uid="uid://bkf6syfwft7hb" path="res://assets/cards/tarot-card-death.png" id="5_ltn8g"]
[ext_resource type="Texture2D" uid="uid://bk1ovpn0qdoue" path="res://assets/cards/tarot-card-lovers.png" id="6_5gwcc"]
[ext_resource type="Texture2D" uid="uid://bv1islhiqkv5u" path="res://assets/cards/tarot-card-tower.png" id="7_qxqnr"]
[ext_resource type="PackedScene" uid="uid://hxty10rku3tl" path="res://cluedomancer_save_state.tscn" id="8_i548b"]

[sub_resource type="Animation" id="Animation_b06x4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/BoostIndicator2/Path2D/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/BoostIndicator2/Path2D/PathFollow2D2:progress_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.485061]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D/BoostIndicator2/Path2D/PathFollow2D3:progress_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.485061]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node2D/BoostIndicator2/Path2D/PathFollow2D4:progress_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.485061]
}

[sub_resource type="Animation" id="Animation_hpulc"]
resource_name = "boost_charged"
length = 3.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/BoostIndicator2/Path2D/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/BoostIndicator2/Path2D/PathFollow2D2:progress_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.25, 1.25]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D/BoostIndicator2/Path2D/PathFollow2D3:progress_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.485061, 1.5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node2D/BoostIndicator2/Path2D/PathFollow2D4:progress_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.75, 1.75]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qutqu"]
_data = {
"RESET": SubResource("Animation_b06x4"),
"boost_charged": SubResource("Animation_hpulc")
}

[sub_resource type="Curve2D" id="Curve2D_rer20"]
_data = {
"points": PackedVector2Array(-2.39988, -73.5457, 2.39988, 73.5457, -332, -45, 0, 0, 0, 0, -291, 34, 0, 0, 0, 0, -243, 68, -146.316, -3.58561, 146.316, 3.58561, 21, 106, 0, 0, 0, 0, 247, 85, 0, 0, 0, 0, 329, 58, 9.9841, 46.5413, -9.9841, -46.5413, 357, -55, 0, 0, 0, 0, 187, -121, 0, 0, 0, 0, 38, -125, 0, 0, 0, 0, -64, -125, 0, 0, 0, 0, -107, -119, 61.2917, -10.5144, -61.2917, 10.5144, -192, -110, 0, 0, 0, 0, -292, -89, 0, 0, 0, 0, -306, -79, -0.235969, -6.54813, 0.235969, 6.54813, -333, -51)
}
point_count = 15

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_52ws4")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(585, 323)
scale = Vector2(1.16699, 1.16699)
texture = ExtResource("2_g62rl")
region_enabled = true
region_rect = Rect2(0, 372.167, 1024, 593.853)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 163.0
offset_top = 46.0
offset_right = 298.0
offset_bottom = 139.0
grow_vertical = 2

[node name="Cluedomancer" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(77, -182)
scale = Vector2(0.323649, 0.323649)
texture = ExtResource("3_7cixq")

[node name="NewGame" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../Continue")
focus_next = NodePath("../Continue")
theme_override_font_sizes/font_size = 24
text = "New Game"

[node name="Continue" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../NewGame")
focus_previous = NodePath("../NewGame")
theme_override_font_sizes/font_size = 24
text = "Continue"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qutqu")
}

[node name="Node2D" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Cluedomancer-full-shot" type="Sprite2D" parent="Node2D"]
y_sort_enabled = true
position = Vector2(708, 363)
scale = Vector2(0.572754, 0.572754)
texture = ExtResource("1_m3oq4")

[node name="BoostIndicator2" type="Node2D" parent="Node2D"]
y_sort_enabled = true
position = Vector2(687, 434)

[node name="Path2D" type="Path2D" parent="Node2D/BoostIndicator2"]
y_sort_enabled = true
position = Vector2(12.0652, 18.2959)
rotation = -0.28279
scale = Vector2(1.03623, 0.978367)
curve = SubResource("Curve2D_rer20")

[node name="PathFollow2D" type="PathFollow2D" parent="Node2D/BoostIndicator2/Path2D"]
y_sort_enabled = true
position = Vector2(-333, -51.0009)
progress = 1581.29
rotates = false

[node name="Sprite2D" type="Sprite2D" parent="Node2D/BoostIndicator2/Path2D/PathFollow2D"]
y_sort_enabled = true
position = Vector2(-0.209228, 0.864803)
rotation = 0.336414
scale = Vector2(0.1, 0.133)
texture = ExtResource("5_ltn8g")

[node name="PathFollow2D2" type="PathFollow2D" parent="Node2D/BoostIndicator2/Path2D"]
y_sort_enabled = true
position = Vector2(-4.97737, 105.037)
progress = 395.323
rotates = false

[node name="Sprite2D" type="Sprite2D" parent="Node2D/BoostIndicator2/Path2D/PathFollow2D2"]
y_sort_enabled = true
position = Vector2(-4.76837e-07, -1.07288e-06)
rotation = 0.336414
scale = Vector2(0.1, 0.13)
texture = ExtResource("6_5gwcc")

[node name="PathFollow2D3" type="PathFollow2D" parent="Node2D/BoostIndicator2/Path2D"]
y_sort_enabled = true
position = Vector2(350.734, 7.23947)
progress = 790.646
rotates = false

[node name="Sprite2D" type="Sprite2D" parent="Node2D/BoostIndicator2/Path2D/PathFollow2D3"]
y_sort_enabled = true
position = Vector2(-4.76837e-07, -1.07288e-06)
rotation = 0.336414
scale = Vector2(0.1, 0.13)
texture = ExtResource("7_qxqnr")

[node name="PathFollow2D4" type="PathFollow2D" parent="Node2D/BoostIndicator2/Path2D"]
y_sort_enabled = true
position = Vector2(43.6112, -124.849)
progress = 1185.97
rotates = false

[node name="Sprite2D" type="Sprite2D" parent="Node2D/BoostIndicator2/Path2D/PathFollow2D4"]
y_sort_enabled = true
position = Vector2(-4.76837e-07, -1.07288e-06)
rotation = 0.336414
scale = Vector2(0.1, 0.13)
texture = ExtResource("5_ltn8g")

[node name="CluedomancerSaveState" parent="." instance=ExtResource("8_i548b")]
unique_name_in_owner = true

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
